k8s/sd-search-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sd-search-api
  namespace: sd-search
  labels:
    app: sd-search-api
    app.kubernetes.io/part-of: sd-search
    app.kubernetes.io/name: sd-search-api
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: sd-search-api
