k8s/sd-search-api/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sd-search-api
  namespace: sd-search
  labels:
    app: sd-search-api
spec:
  host: sd-search-api.apps.example.com
  path: /
  to:
    kind: Service
    name: sd-search-api
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
